# StructureAutomated

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py
backend/app/audit/: __init__.py  repository.py  service.py
backend/app/auth/: __init__.py  clerk_jwks.py  dependencies.py  local_mock.py  managed.py  mfa.py  principal.py  verifier.py
backend/app/authz/: __init__.py  dependencies.py
backend/app/db/: __init__.py  rls.py
backend/app/integrations/: __init__.py  registry.py
backend/app/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  audit_event.py  auth_session.py  base.py  billing.py  campaign.py  compliance.py  contact.py  (+15 more)
backend/db/: roles.sql
backend/migrations/: env.py
backend/tests/: test_audit.py  test_auth.py  test_authz.py  test_billing.py  test_boot_guard.py  test_bootstrap_local_demo.py  test_campaign.py  test_clerk_jwks.py  test_compliance.py  test_contact_read.py  test_credentials.py  test_csv_import.py  test_database.py  test_deliverability.py  test_draft_generation.py  test_e2e_phase1_smoke.py  test_email_provider.py  test_error_envelope.py  test_followup_scheduler.py  test_grounded_happy_path_e2e.py  test_groundedness.py  test_health.py  test_idempotency.py  test_local_e2e_smoke.py  test_local_stability_smoke.py  test_logging_redaction.py  test_mfa.py  test_migrations_offline.py  test_mock_sender_provider_boundary.py  test_outcomes.py  test_pagination.py  test_queue.py  test_rag_grounding.py  test_rate_limit.py  test_rate_limit_endpoints.py  test_redis_rate_limit.py  test_repository_row_mapping.py  test_request_id.py  test_research.py  test_resend_email_provider.py  (+23 more)
(+439 files in other folders)
