[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automatedstructure-backend"
version = "0.0.0"
description = "AutomatedStructure backend — secure multi-tenant SaaS foundation (Phase 0)."
requires-python = ">=3.12"
# Runtime dependencies are declared here so the workspace is ready for later
# slices. No application behaviour is implemented in Slice 1.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
# S101 (assert) is allowed in tests; configured per-file below.

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert and intentionally contain fake/sentinel secrets.
"tests/**" = ["S101", "S105", "S106", "S107"]

[tool.black]
target-version = ["py312"]
line-length = 100
extend-exclude = '''
/migrations/versions/
'''

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
# Strictness ramps up as real code lands; placeholders pass cleanly today.

# Alembic does not ship complete type stubs.
[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
